Add ColumnWidth and associated type converter as an alternative to GridLength to support absolute width based on font metrics Replace logic FontSize values with explicit point size.

--- a/BindableGrid/Grid.xaml
+++ b/BindableGrid/Grid.xaml
@@ -26,7 +26,7 @@
                     Value="Center"/>
 
             <Setter Property="FontSize"
-                    Value="Medium"/>
+                    Value="12"/>
             <Setter Property="FontFamily"
                     Value="OpenSansRegular"/>
          </Style>
